# gengir

./: Cargo.toml  LICENSE  README.md
src/: declarations.rs  generation.rs  gi_init.pyi  main.rs  overrides.rs  pygen.rs  xml_skip.rs
src/analyzer/: classes.rs  common.rs  enumerations.rs  functions.rs  mod.rs  parser.rs  tagnalizer.rs  types.rs
