[package]
name = "gengir"
description = "Generate PEP 561 stubs for the GObject introspection library"
authors = ["Santiago Cézar <santiagocezar2013@gmail.com>"]
version = "1.0.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
lazy_static = "1.4.0"
regex = "1.5.4"
if_chain = "1.0.2"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
indexmap = "1.7.0"

[profile.release]
opt-level = 3

[[bin]]
path = "src/main.rs"
name = "gengir"
